# continuing with this file until flake8 and mypy support pyproject.toml
# https://packaging.python.org/en/latest/overview/
# https://github.com/flying-sheep/awesome-python-packaging
#
# Do not quote values in this file!
[metadata]
name = glue
version = 2.12.1
description = Basic container and parser for CRUD operations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/edencehealth/ohdsi-glue
project_urls =
  Bug Tracker = https://github.com/edencehealth/ohdsi-glue/issues
author = edenceHealth NV
author_email = info@edence.health
license = SEE LICENSE IN license.txt
# see: https://pypi.org/classifiers/
classifiers =
  Development Status :: 1 - Planning
  Programming Language :: Python :: 3
  License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)
  Operating System :: OS Independent
  Natural Language :: English

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.11
# install_requires =

[options.packages.find]
where = src

[flake8]
ignore=E203,E266,E501,W503
max-line-length=88
max-complexity=18
select=B,C,E,F,W,T4
exclude=.git,venv,.venv,__pycache__

[pylint.format]
max-line-length=88

[pylint.messages control]
disable=
  line-too-long,
  invalid-name,
  duplicate-code

[pylint.master]
extension-pkg-allow-list=ctds

[isort]
force_grid_wrap=0
include_trailing_comma=True
line_length=88
multi_line_output=3
profile=black
use_parentheses=True
combine_as_imports=True

[mypy]
files=src/*/*.py,src/*/*/*.py
ignore_missing_imports=true

[tool:pytest]
doctest_optionflags=NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL
addopts=--doctest-modules -v
testpaths=tests/
